feat: implement admin module with dashboard and user management